--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
- Theme Name:   ReviewZine
- Theme URI:    http://themeisle.com/themes/reviewzine/
- Description:  A modern and clean free WordPress theme for tech magazines, news and newspaper media websites, personal fashion blogs, or photography, ReviewZine is responsive, flat, minimalist, SEO friendly, Retina ready, built with Bootstrap, and has social links. Released in 2016, the theme has Google AdSense banners, a magazine homepage template, custom backgrounds, filtered categories, tags, boxed layout, and live customizer. ReviewZine is WPML, Photo Gallery Grid,Contact Form 7,WP Product Review, SiteOrigin Page Builder, JetPack compatible, the theme is highly customizable and translation ready.
- Author:       Themeisle
- Author URI:   http://themeisle.com
+ Theme Name:   YDWA
+ Theme URI:    https://inabox.com
+ Description:  Based off of the ReviewZine theme, a child theme of Islemag.
+ Author:       In-a-Box
+ Author URI:   https://inabox.com
  Template:     islemag
- Version:      1.0.6
- License:      GNU General Public License v2 or later
- License URI:  http://www.gnu.org/licenses/gpl-2.0.html
+ Version:      0.0.2
+ License:      GNU General Public License v3 or later
+ License URI:  http://www.gnu.org/licenses/gpl-3.0.html
  Tags:         two-columns, right-sidebar, rtl-language-support,sticky-post,theme-options, custom-background, custom-menu, featured-images, threaded-comments, translation-ready
  Text Domain:  reviewzine
 */
