--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:       In-a-Box
  Author URI:   https://inabox.com
  Template:     islemag
- Version:      0.4.0
+ Version:      0.4.1
  License:      GNU General Public License v3 or later
  License URI:  http://www.gnu.org/licenses/gpl-3.0.html
  Tags:         two-columns, right-sidebar, rtl-language-support,sticky-post,theme-options, custom-background, custom-menu, featured-images, threaded-comments, translation-ready
@@ -1181,6 +1181,14 @@ hr.tearaway {
   border-top: 4px dashed #333333;
   background-color: transparent;
 }
+h3.blog-related-carousel-title:before,
+h3#reply-title:before,
+#comments .comments-title:before,
+h3.blog-related-carousel-title:after,
+h3#reply-title:after,
+#comments .comments-title:after {
+	display: none;
+}
 .entry:after {
   background: none;
 }
@@ -1199,6 +1207,10 @@ hr.tearaway {
 .entry-date {
   border: none;
 }
+.entry-date span + span {
+	font-size: 13px;
+	margin-top: 6px;
+}
 .entry .extra-info {
 	display: none;
 }
@@ -1209,8 +1221,15 @@ hr.tearaway {
 .entry.single .entry-footer {
   margin-top: 0;
 }
+.islemag-top-container .entry-block .entry-overlay-meta {
+	min-height: 120px;
+}
 .islemag-top-container .entry-block .entry-overlay-meta .entry-title a {
 	font-weight: bold;
+}
+.islemag-top-container .entry-block .entry-media img {
+	min-width: 100%;
+	height: 390px;
 }
 .entry-overlay-meta a:hover,
 .entry-overlay-meta .entry-title a:hover,
