--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:       In-a-Box
  Author URI:   https://inabox.com
  Template:     islemag
- Version:      0.4.1
+ Version:      0.4.2
  License:      GNU General Public License v3 or later
  License URI:  http://www.gnu.org/licenses/gpl-3.0.html
  Tags:         two-columns, right-sidebar, rtl-language-support,sticky-post,theme-options, custom-background, custom-menu, featured-images, threaded-comments, translation-ready
@@ -1189,12 +1189,31 @@ h3#reply-title:after,
 #comments .comments-title:after {
 	display: none;
 }
+#header {
+	margin-bottom: 0;
+}
+#header-search-form {
+	background: rgba(255,255,255,0.9);
+	border-radius: 0;
+	box-shadow: none;
+}
+#header-search-form.top:before {
+	top: -20px;
+	border-width: 0 20px 20px;
+	border-color: #dadada transparent;
+}
+#header-search-form.top:after {
+	top: -19px;
+	right: 0;
+	border-width: 0 20px 20px;
+	border-color: rgba(255,255,255,0.9) transparent;
+}
 .entry:after {
   background: none;
 }
 .entry-overlay.entry-block .entry-overlay-meta,
 .entry-overlay.entry-block:hover .entry-overlay-meta {
-	bottom: 36px;
+	bottom: 24px;
 	background: rgba(255,255,255,0.9);
 	padding-top: 15px;
 }
@@ -1221,15 +1240,20 @@ h3#reply-title:after,
 .entry.single .entry-footer {
   margin-top: 0;
 }
+.islemag-top-container {
+	border-bottom: 1px solid #eaeaea;
+}
 .islemag-top-container .entry-block .entry-overlay-meta {
-	min-height: 120px;
+	bottom: 0;
+	min-height: 144px;
+	border-top: 1px solid #eaeaea;
 }
 .islemag-top-container .entry-block .entry-overlay-meta .entry-title a {
 	font-weight: bold;
 }
 .islemag-top-container .entry-block .entry-media img {
 	min-width: 100%;
-	height: 390px;
+	height: 400px;
 }
 .entry-overlay-meta a:hover,
 .entry-overlay-meta .entry-title a:hover,
@@ -1256,8 +1280,15 @@ h3#reply-title:after,
 .sidebar .widget li a {
   font-weight: bold;
 }
+.home .sidebar .widget_eme_list {
+	display: none;
+}
 #footer {
   border-top: none;
+}
+.navbar-top .menu-toggle {
+	text-transform: uppercase;
+	padding-top: 1px;
 }
 
 /* Plugins */
@@ -1484,7 +1515,10 @@ form.pmpro_form .pmpro_submit {
   color: #fff;
 }
 @media (max-width: 600px) {
-	.entry.entry-overlay .entry-media {
+	.islemag-top-container {
+		margin-bottom: 20px;
+	}
+	.islemag-top-container .entry.entry-overlay .entry-media {
 		height: 400px;
 	}
 }
