--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
  Author:       In-a-Box
  Author URI:   https://inabox.com
  Template:     islemag
- Version:      0.4.2
+ Version:      0.4.4
  License:      GNU General Public License v3 or later
  License URI:  http://www.gnu.org/licenses/gpl-3.0.html
  Tags:         two-columns, right-sidebar, rtl-language-support,sticky-post,theme-options, custom-background, custom-menu, featured-images, threaded-comments, translation-ready
@@ -1154,8 +1154,23 @@ input[type=date],
 input[type=url],
 input[type=password],
 input[type=search],
-textarea {
-  border: 2px solid #333333;
+textarea,
+select {
+  border-width: 2px !important;
+}
+input[type=tel],
+input[type=date] {
+  padding: 9px 16px;
+  vertical-align: middle;
+}
+input[type=email]:focus,
+input[type=tel]:focus,
+input[type=date]:focus,
+input[type=url]:focus,
+input[type=password]:focus,
+input[type=search]:focus,
+textarea:focus {
+	box-shadow: 0 0 8px rgba(0,0,0, 0.22);
 }
 input[type=text]#s,
 input[type=email]#s,
@@ -1167,10 +1182,11 @@ input[type=search]#s,
 textarea#s {
   border-width: 1px;
 }
-input[type=tel],
-input[type=date] {
-  padding: 9px 16px;
-  vertical-align: middle;
+.widget select {
+	background-image: none;
+	border-width: 2px;
+	-moz-appearance: menulist;
+	-webkit-appearance: menulist;
 }
 hr {
   border-top-color: #333333;
@@ -1189,8 +1205,22 @@ h3#reply-title:after,
 #comments .comments-title:after {
 	display: none;
 }
-#header {
+h3.blog-related-carousel-title,
+h3#reply-title,
+#comments .comments-title {
+	font-size: 24px;
+	font-weight: 700;
+	line-height: 24px;
+	margin-bottom: 25px;
+}
+.blog-related-carousel .entry-media {
+	border-width: 2px;
+}
+.home #header {
 	margin-bottom: 0;
+}
+.main-navigation {
+	border-width: 2px;
 }
 #header-search-form {
 	background: rgba(255,255,255,0.9);
@@ -1210,12 +1240,6 @@ h3#reply-title:after,
 }
 .entry:after {
   background: none;
-}
-.entry-overlay.entry-block .entry-overlay-meta,
-.entry-overlay.entry-block:hover .entry-overlay-meta {
-	bottom: 24px;
-	background: rgba(255,255,255,0.9);
-	padding-top: 15px;
 }
 .entry-title {
   font-size: 30px;
@@ -1238,35 +1262,77 @@ h3#reply-title:after,
   border-collapse: collapse;
 }
 .entry.single .entry-footer {
-  margin-top: 0;
+	line-height: initial;
+	border-width: 2px;
+	border-bottom: none;
+	line-height: 24px;
+	margin-top: 0;
+	padding-top: 1em;
 }
-.islemag-top-container {
-	border-bottom: 1px solid #eaeaea;
+.entry.single .entry-footer > a {
+	white-space: nowrap;
 }
-.islemag-top-container .entry-block .entry-overlay-meta {
-	bottom: 0;
-	min-height: 144px;
-	border-top: 1px solid #eaeaea;
+.about-author {
+	border-width: 2px;
 }
-.islemag-top-container .entry-block .entry-overlay-meta .entry-title a {
-	font-weight: bold;
+.blog-related-carousel .entry-media figure {
+	height: 250px;
 }
-.islemag-top-container .entry-block .entry-media img {
+.blog-related-carousel .entry-media img {
 	min-width: 100%;
-	height: 400px;
+	min-height: 250px;
+}
+.entry-overlay.entry-block .entry-overlay-meta,
+.entry-overlay.entry-block:hover .entry-overlay-meta,
+.blog-related-carousel h3.entry-title,
+.blog-related-carousel .entry-meta {
+	background: rgba(255,255,255,0.9);
+}
+.entry-overlay.entry-block .entry-overlay-meta,
+.entry-overlay.entry-block:hover .entry-overlay-meta {
+	bottom: 24px;
+	padding-top: 15px;
+}
+.blog-related-carousel h3.entry-title {
+	position: absolute;
+	bottom: 35px;
+	max-height: 58px;
+	font-size: 16px;
+	border-top: 2px solid #eaeaea;
+	padding: 6px;
+}
+.blog-related-carousel .entry-meta {
+	position: absolute;
+	bottom: 12px;
+	width: 100%;
+	border-bottom: 2px solid #eaeaea;
+	padding: 0 6px 6px 6px;
 }
 .entry-overlay-meta a:hover,
-.entry-overlay-meta .entry-title a:hover,
+.entry-overlay-meta h3.entry-title a:hover,
 .entry-overlay-meta a:focus,
-.entry-overlay-meta .entry-title a:focus {
-	text-decoration: none;
+.entry-overlay-meta h3.entry-title a:focus {
+	text-decoration: none !important;
 }
 .owl-nav .owl-prev,
 .owl-nav .owl-next {
   border-radius: 0;
 }
-.blog-related-carousel .entry-media {
-  border: 1px solid #333333;
+.islemag-top-container {
+	border-bottom: 2px solid #eaeaea;
+}
+.islemag-top-container .entry-block .entry-media img {
+	min-width: 100%;
+	height: 400px;
+}
+.islemag-top-container .entry-block .entry-overlay-meta,
+.islemag-top-container .entry-block .entry-overlay-meta:hover {
+	bottom: 0;
+	min-height: 144px;
+	border-top: 2px solid #eaeaea;
+}
+.islemag-top-container .entry-block .entry-overlay-meta .entry-title a {
+	font-weight: bold;
 }
 .nav-menu li {
   color: #ffffff;
@@ -1296,13 +1362,25 @@ h3#reply-title:after,
 div.sharedaddy ul > li:before {
   display: none;
 }
-div.sharedaddy h3.sd-title {
-  width: 100%;
-  font-size: 14px;
-  font-weight: 400;
+div.sharedaddy {
+	border-top: 2px solid #eaeaea;
+	margin-top: 1em;
+	padding-top: 1em;
 }
-div.sharedaddy h3.sd-title:before {
-  margin-top: 1em;
+div.sharedaddy h3.sd-title {
+	display: none !important;
+}
+.sharing-hidden .inner {
+	background: rgba(255,255,255,0.9) !important;
+	border: 2px solid #dadada !important;
+	border-radius: 0 !important;
+	box-shadow: none !important;
+}
+.sharing-hidden .inner:before {
+	border-bottom-color: #dadada !important;
+}
+.sharing-hidden .inner:after {
+	border-bottom-color: rgba(255,255,255,0.9) !important;
 }
 
 /* Events Made Easy */
